# variable-encoding-framework

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: hashutil.h
src/vecbf/: vecbf.h
src/vecf/: bitsutil.h  singletable.h  vecf.h
src/veqf/: bitsutil.h  veqf.h
test/: CMakeLists.txt  correctness.cpp
